2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/23_castClass.deca
// Description:
//    Programme : casting des classes
// Resultats:
//      Programme correcte  
//
// Historique:
//    cree le 18/01/2024

class A{
    protected float y;
}

class B extends A{

}

{
    B b = new B();
    A a = (A)(b);
}